@@ -92,7 +92,7 @@ sub constants {
 	      INSTALLPRIVLIB INSTALLARCHLIB INSTALLSITELIB
 	      INSTALLSITEARCH INSTALLBIN INSTALLSCRIPT PERL_LIB
 	      PERL_ARCHLIB SITELIBEXP SITEARCHEXP LIBPERL_A MYEXTLIB
-	      FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
+	      FIRST_MAKEFILE MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
 	      PERL_INC PERL FULLPERL LIBPTH BASE_IMPORT PERLRUN
               FULLPERLRUN PERLRUNINST FULLPERLRUNINST
               FULL_AR PERL_CORE NLM_VERSION MPKTOOL TOOLPATH
