@@ -419,9 +419,9 @@ sub constants {
 	      PERL_LIB PERL_ARCHLIB 
               SITELIBEXP SITEARCHEXP 
               LIBPERL_A MYEXTLIB
-	      FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC PERL_VMS
-	      PERL_INC PERL FULLPERL PERLRUN FULLPERLRUN PERLRUNINST
-              FULLPERLRUNINST ABSPERL ABSPERLRUN ABSPERLRUNINST
+	      FIRST_MAKEFILE MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC 
+              PERL_VMS PERL_INC PERL FULLPERL PERLRUN FULLPERLRUN 
+              PERLRUNINST FULLPERLRUNINST ABSPERL ABSPERLRUN ABSPERLRUNINST
               PERL_CORE NOECHO NOOP
 	      / ) {
 	next unless defined $self->{$macro};
