@@ -155,7 +155,7 @@ sub constants {
               PERL_LIB        PERL_ARCHLIB 
               SITELIBEXP      SITEARCHEXP 
               LIBPERL_A MYEXTLIB
-              FIRST_MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
+              FIRST_MAKEFILE MAKEFILE MAKE_APERL_FILE PERLMAINCC PERL_SRC
               PERL_INC PERL FULLPERL PERLRUN FULLPERLRUN PERLRUNINST 
               FULLPERLRUNINST ABSPERL ABSPERLRUN ABSPERLRUNINST
               FULL_AR PERL_CORE
